gitlabs config added

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,12 @@
-stages: deploy
+stages:
+  - deploy
+  - validate
 
-doit:
+deploy:
   stage: deploy
   script:
     - salt -L 'porchcam, eastgaragecam' cmd.run 'cd /home/pi/FFStreamerCapture; git reset --hard; git pull'
+validate:
+  stage: validate
+  script:
+    - salt -L 'porchcam, eastgaragecam' service.status camera'
