--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 deploy:
   stage: deploy
   script:
+    - pip install pyinstaller
     - pyinstaller main.py
     - salt -L "porchcam, eastgaragecam" state.sls deploy
     - salt -L "porchcam, eastgaragecam" service.restart camera
