--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
-
+image: "python:3.8"
+before_script:
+  - pip install pyinstaller
 stages:
   - deploy
 
 deploy:
   stage: deploy
   script:
-    - pip install pyinstaller
+    - pip install -r requirements.txt
     - pyinstaller main.py
     - salt -L "porchcam, eastgaragecam" state.sls deploy
     - salt -L "porchcam, eastgaragecam" service.restart camera
