--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,6 @@ deploy:
     - pip3 install -r requirements.txt
     - ls -ltr
     - pyinstaller -F main.py
+    - ls -l dist
+    - mv dist/main /srv/salt/deploy/main
     - salt -L "porchcam, eastgaragecam" state.sls deploy
-    - salt -L "porchcam, eastgaragecam" service.restart camera
