--- a/camera.service
+++ b/camera.service
@@ -4,7 +4,7 @@ After=multi-user.target network.target
 
 [Service]
 Type=idle
-ExecStart=/usr/bin/python3 /home/pi/FFStreamerCapture/main.py
+ExecStart=/usr/bin/python3.6 /home/pi/FFStreamerCapture/main.py
 
 [Install]
 WantedBy=multi-user.target
